<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>JenkinsTrigger</groupId>
  <artifactId>JenkinsTrigger</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>



	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.11</version>
			<!-- <scope>compile</scope> -->
		</dependency>

		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>3.11.0</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/junit/junit -->
<dependency>
    <groupId>junit</groupId>
    <artifactId>junit</artifactId>
    <version>4.13.1</version>
    <scope>test</scope>
</dependency>
		
		
		<dependency>
			<groupId>net.masterthought</groupId>
			<artifactId>cucumber-reporting</artifactId>
			<version>3.8.0</version>
		</dependency>
		
	</dependencies>
	<build>
	<pluginManagement>
		<plugins>
			 <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      
      <plugin>
  <groupId>org.codehaus.mojo</groupId>
  <artifactId>exec-maven-plugin</artifactId>
  <version>3.0.0</version>
  <executions>
    <execution>
    <phase>test</phase>
      <goals>
        <goal>java</goal>
      </goals>
    </execution>
  </executions>
  <configuration>
    <classpathScope>test</classpathScope>
    <mainClass>Demo.DemoTest</mainClass>
  </configuration>
</plugin>
     <!--  
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.2</version>
      <configuration>
      <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
      <testFailureIgnore>true</testFailureIgnore>
      <useSystemClassLoader>false</useSystemClassLoader>
      <includes>
      <include>**/*Test.java</include>
      </includes>
      <parallel>methods</parallel>
      <threadCount>2</threadCount>
      
      </configuration>
      </plugin> -->
      
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.4</version>
			</plugin>
			
			<plugin>
				<groupId>net.masterthought</groupId>
				<artifactId>maven-cucumber-reporting</artifactId>
				<version>3.15.0</version>
				<executions>
					<execution>
						<id>execution</id>
						<phase>verify</phase>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<projectName>JenkinsTrigger</projectName>  <!-- Replace with project name -->
							<outputDirectory>target/cucumber-reports/advanced-reports</outputDirectory>
							<cucumberOutput>target/cucumber-reports/CucumberTestReport.json</cucumberOutput>
							<buildNumber>1</buildNumber>
							<parallelTesting>false</parallelTesting>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		</pluginManagement>
	</build>
</project>
 